2002-08-02  Frank Belew  <frb@ximian.com>

	* configure.in: add --enable-static-proxy with the required magic
			  to keep some libraries shared
	* src/soup-ssl-proxy/Makefile.am: added flags to LDADD for static 
				          linkage

2002-08-02  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-message.c (soup_message_cleanup): Back out the
	last change, since we still need to throw away the remaining data.

2002-08-01  Dan Winship  <danw@ximian.com>

	* src/libsoup/soup-message.c (soup_message_cancel): If the message
	has a connection, turn off keep_alive on it so it gets closed when
	we release it.
	(soup_message_cleanup): Only set up read callbacks to throw away
	the remaining data to be read if the connection is going to be
	kept around afterward. Otherwise there's no reason to not just
	discard the connection right away.

	* src/libsoup/soup-context.c (soup_connection_set_keep_alive,
	(soup_connection_is_keep_alive): Fix the doc comments to correctly
	identify these functions.

2002-07-26  Joe Shaw  <joe@ximian.com>

	* src/soup-ssl-proxy/soup-ssl-proxy.c (soup_ssl_proxy_readwrite):
	Don't quit when we receive a G_IO_HUP, as there may still be data on
	the channel to read.
	(main): Don't listen to G_IO_HUP conditions on the channels.

2002-07-26  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-message.c (authorize_handler): If we're using
	NTLM, get the old auth (if there is one) and free it ourselves
	since we don't use soup_auth_set_context().

2002-07-24  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-nss.c: Check the server mode and set up a
	client or server handshake appropriately.

	* src/libsoup/soup-server.c (destroy_message): If we're supposed
	to close the connection, go ahead and close it.
	(message_new): Set the method to NULL, or else we'll segfault
	later.
	(conn_accept): Call soup_ssl_get_server_iochannel() instead.

	* src/libsoup/soup-ssl.c (soup_ssl_get_iochannel_real): Added.
	Does all of the heavy lifting from soup_ssl_get_iochannel().