@@ -1,3 +1,9 @@
+2002-08-05  Joe Shaw  <joe@ximian.com>
+
+	* src/libsoup/soup-uri.c (soup_uri_new): If we don't have a valid
+	protocol, free the SoupUri structure before we return.  Patch from
+	Jon Trowbridge (trow@ximian.com)
+
 2002-08-02  Frank Belew  <frb@ximian.com>
 
 	* configure.in: add --enable-static-proxy with the required magic
